# VitaAI/Generated/Models/MyReferralResponse.swift
@@ -1,0 +1,65 @@
+//
+// MyReferralResponse.swift
+//
+// Generated by openapi-generator
+// https://openapi-generator.tech
+//
+
+import Foundation
+
+public struct MyReferralResponse: Sendable, Codable, Hashable {
+
+    public var code: String
+    public var isCustomized: Bool
+    public var shareUrl: String
+    public var rewards: MyReferralResponseRewards
+    public var totalInvited: Int
+    public var totalQualified: Int
+    public var totalDaysEarned: Int
+    public var myProUntil: Date?
+    public var qualifiedFriends: [MyReferralResponseQualifiedFriendsInner]?
+    public var pendingFriends: [MyReferralResponsePendingFriendsInner]?
+
+    public init(code: String, isCustomized: Bool, shareUrl: String, rewards: MyReferralResponseRewards, totalInvited: Int, totalQualified: Int, totalDaysEarned: Int, myProUntil: Date? = nil, qualifiedFriends: [MyReferralResponseQualifiedFriendsInner]? = nil, pendingFriends: [MyReferralResponsePendingFriendsInner]? = nil) {
+        self.code = code
+        self.isCustomized = isCustomized
+        self.shareUrl = shareUrl
+        self.rewards = rewards
+        self.totalInvited = totalInvited
+        self.totalQualified = totalQualified
+        self.totalDaysEarned = totalDaysEarned
+        self.myProUntil = myProUntil
+        self.qualifiedFriends = qualifiedFriends
+        self.pendingFriends = pendingFriends
+    }
+
+    public enum CodingKeys: String, CodingKey, CaseIterable {
+        case code
+        case isCustomized
+        case shareUrl
+        case rewards
+        case totalInvited
+        case totalQualified
+        case totalDaysEarned
+        case myProUntil
+        case qualifiedFriends
+        case pendingFriends
+    }
+
+    // Encodable protocol methods
+
+    public func encode(to encoder: Encoder) throws {
+        var container = encoder.container(keyedBy: CodingKeys.self)
+        try container.encode(code, forKey: .code)
+        try container.encode(isCustomized, forKey: .isCustomized)
+        try container.encode(shareUrl, forKey: .shareUrl)
+        try container.encode(rewards, forKey: .rewards)
+        try container.encode(totalInvited, forKey: .totalInvited)
+        try container.encode(totalQualified, forKey: .totalQualified)
+        try container.encode(totalDaysEarned, forKey: .totalDaysEarned)
+        try container.encodeIfPresent(myProUntil, forKey: .myProUntil)
+        try container.encodeIfPresent(qualifiedFriends, forKey: .qualifiedFriends)
+        try container.encodeIfPresent(pendingFriends, forKey: .pendingFriends)
+    }
+}
+
